# libsixel

./: .clang-format  .clang-tidy  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  Build.PL  CONTRIBUTING.md  ChangeLog  LICENSE  LICENSE.images  LICENSE.mesa  LICENSE.pnmquant  LICENSE.sdump  LICENSE.sixel  LICENSE.sixel_original_version  LICENSE.stb  LICENSE.stb_image  LICENSE.stbi  LICENSE.stbiw  LICENSE.tw  LICENSE.xterm  META.json  META.yml  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.rst  SECURITY.md  _config.yml  a.diff  aclocal.m4  build-gdkpixbuf.sh  build.md  config.h.in  configure  (+29 more)
amalgamation/: Makefile.am  Makefile.in  meson.build
assessment/: Makefile.am  Makefile.in  assessment.c  assessment.h  lsqa.c  meson.build
converters/: Makefile.am  Makefile.in  aborttrace.c  aborttrace.h  cli.c  cli.h  compat.c  compat.h  compat_stub.c  compat_stub.h  completion_utils.c  completion_utils.h  frompnm.c  frompnm.h  getopt_stub.h  img2sixel-node-launcher.in  img2sixel-options-fuzz.c  img2sixel.1  img2sixel.c  img2sixel_tests.sh  jpegref.c  loader.c  loader.h  malloc_stub.c  malloc_stub.h  meson.build  path.c  path.h  quant.c  quant.h  scale.c  scale.h  sixel2png-node-launcher.in  sixel2png.1  sixel2png.c  sixel2png_tests.sh  stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h  (+1 more)
converters/t/: common.t  test_0001_01_invalid_positional.t  test_0001_02_invalid_option_arguments.t  test_0001_03_invalid_option_combinations.t  test_0001_invalid_option.t  test_0002_stdin.t  test_0003_information.t  test_0004_conversion_options.t  test_0004_conversion_options_01.t  test_0004_conversion_options_02.t  test_0004_conversion_options_03.t  test_0004_conversion_options_04.t  test_0005_dcs_arguments.t  test_0006_dcs_variations.t  test_0007_animation.t  test_0008_progressive_jpeg.t  test_0009_pngsuite.t  test_0010_curl.t  test_0011_basic.t  test_0012_regressions.t  test_0013_documentation.t  test_0014_option_matching.t  test_0015_argument_shift.t  test_0016_assessment_spool.t  test_0017_clipboard.t  test_0018_parallel_prescan.t
converters/tests/: config.sh.in  lib.sh  run-tests.sh  test01_invalid_options.sh  test02_stdin.sh  test03_help_version.sh  test04_conversion_options.sh  test05_dcs_arguments.sh  test06_dcs_variations.sh  test07_animation.sh  test08_progressive_jpeg.sh  test09_png_suite.sh  test10_curl.sh  test11_sixel2png.sh  test13_regressions.sh  test14_documentation.sh
examples/: Makefile.am  Makefile.in  meson.build
examples/drawing/: Makefile  Makefile.am  Makefile.in  README.md  main.c
examples/opengl/: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  main.c  (+1 more)
fuzz/: Makefile.am  Makefile.in  fuzz-encoder-encode-bytes-libfuzzer.c  fuzz-helper-write-image-file-libfuzzer.c  fuzz-img2sixel-afl-persistent.c  fuzz-img2sixel-cli-boundary-afl-persistent.c  fuzz-img2sixel-cli-numeric-afl-persistent.c  fuzz-img2sixel-cli-parser-afl-persistent.c  fuzz-img2sixel-cli-pathenv-afl-persistent.c  fuzz-loader-builtin-libfuzzer.c  fuzz-loader-builtin-struct-bmp-dib-libfuzzer.c  fuzz-loader-builtin-struct-bmp-rle-bitfields-libfuzzer.c  fuzz-loader-builtin-struct-common.h  fuzz-loader-builtin-struct-exif-orientation-libfuzzer.c  fuzz-loader-builtin-struct-gif-block-libfuzzer.c  fuzz-loader-builtin-struct-gif-lzw-codes-libfuzzer.c  fuzz-loader-builtin-struct-hdr-header-libfuzzer.c  fuzz-loader-builtin-struct-jpeg-icc-libfuzzer.c  fuzz-loader-builtin-struct-loader-order-libfuzzer.c  fuzz-loader-builtin-struct-mapfile-palette-libfuzzer.c  fuzz-loader-builtin-struct-mapfile-spec-libfuzzer.c  fuzz-loader-builtin-struct-option-arglist-libfuzzer.c  fuzz-loader-builtin-struct-pic-structure-libfuzzer.c  fuzz-loader-builtin-struct-png-apng-libfuzzer.c  fuzz-loader-builtin-struct-png-chunk-libfuzzer.c  fuzz-loader-builtin-struct-png-icc-gamma-libfuzzer.c  fuzz-loader-builtin-struct-png-plte-trns-libfuzzer.c  fuzz-loader-builtin-struct-pnm-ascii-libfuzzer.c  fuzz-loader-builtin-struct-psd-resource-libfuzzer.c  fuzz-loader-builtin-struct-runtime.c  fuzz-loader-builtin-struct-sixel-stream-libfuzzer.c  fuzz-loader-component-libfuzzer.c  loader-builtin.dict  meson.build
gdk-pixbuf-loader/: Makefile.am  Makefile.in  README.md  meson.build  sixel-pixbuf-loader.c
images/: .gitattributes  Makefile.am  Makefile.in  autumn.dds  autumn.heic  fisheye.dds  fisheye.hdp  fisheye.heic  libsixel.avif  libsixel.jxl  map64.six  map8.six  meson.build  snake-ascii.pbm  snake-ascii.pgm  snake-ascii.ppm  snake-palette.tga  snake.dump-pal8-body  snake.dump-pal8-pal  snake.dump-rgb888  snake.pbm  snake.pgm  snake.pnm  snake.six  snake.tga  snake.tiff
include/: 6cells.h  6cells.idl  Makefile.am  Makefile.in  meson.build  sixel-imageio.h.in  sixel.h  sixel.h.in
php/: .gitignore  CREDITS  LICENSE  Makefile.am  Makefile.in  README  README.md  composer.json  config.m4  config.w32  meson.build  package.xml  package2.xml  package_builder.php  php_sixel.h  sixel.c  sixel.dsp  sixel.xml
python/: LICENSE  Makefile.am  Makefile.in  README.rst  libsixel.py  meson.build  sample1.py  setup.cfg  setup.py  wheel_builder.py
python-wheel/: .gitignore  LICENSE  MANIFEST.in  Makefile.am  Makefile.in  README.md  pyproject.toml  setup.py
quicklook-extension/: .gitignore  Makefile.am  Makefile.in  meson.build
ruby/: Gemfile  LICENSE.txt  Makefile.am  Makefile.in  README  README.md  Rakefile  gem_builder.rb  libsixel-ruby.gemspec  setup.rb  sixel.c
src/: Makefile.am  Makefile.in  allocator.c  allocator.h  assessment-timer.c  assessment.c  assessment.h  bluenoise_64x64.h  chunk-factory.h  chunk-view.h  chunk.c  chunk.h  classid-dither-policy.h  classid-dither.gperf  classid-dither.h  classid-factory.gperf  classid-factory.h  classid-loader-component.h  classid-loader.gperf  classid-lookup-policy.h  classid-service.gperf  classid-service.h  classid.gperf  classid.h  clipboard.c  clipboard.h  clipboard_carbon.c  clipboard_macos.m  cms.c  cms.h  colorspace.c  colorspace.h  compat_stub.c  compat_stub.h  components.c  components.h  cpu.c  cpu.h  debug.h  decoder-image.h  (+386 more)
(+9586 files in other folders)
